--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             background-color: #f5f5f5;
+            position: relative;
         }
 
         .container {
@@ -194,10 +195,48 @@
                 transform: rotate(360deg);
             }
         }
+
+        .github-logo {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+            padding: 10px;
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            transition: all 0.2s ease;
+        }
+
+        .github-logo:hover {
+            background-color: rgba(255, 255, 255, 1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            transform: translateY(-1px);
+        }
+
+        .github-logo svg {
+            display: block;
+            fill: #333;
+            transition: fill 0.2s ease;
+        }
+
+        .github-logo:hover svg {
+            fill: #007bff;
+        }
     </style>
 </head>
 
 <body>
+
+    <a class="github-logo" href="https://github.com/InternetOfPeers/hedera-hbar-exchange-rate-oracle-analysis"
+        target="_blank" rel="noopener noreferrer" aria-label="View source on GitHub">
+        <svg height="32" aria-hidden="true" viewBox="0 0 24 24" version="1.1" width="32" data-view-component="true">
+            <path
+                d="M12 1C5.923 1 1 5.923 1 12c0 4.867 3.149 8.979 7.521 10.436.55.096.756-.233.756-.522 0-.262-.013-1.128-.013-2.049-2.764.509-3.479-.674-3.699-1.292-.124-.317-.66-1.293-1.127-1.554-.385-.207-.936-.715-.014-.729.866-.014 1.485.797 1.691 1.128.99 1.663 2.571 1.196 3.204.907.096-.715.385-1.196.701-1.471-2.448-.275-5.005-1.224-5.005-5.432 0-1.196.426-2.186 1.128-2.956-.111-.275-.496-1.402.11-2.915 0 0 .921-.288 3.024 1.128a10.193 10.193 0 0 1 2.75-.371c.936 0 1.871.123 2.75.371 2.104-1.43 3.025-1.128 3.025-1.128.605 1.513.221 2.64.111 2.915.701.77 1.127 1.747 1.127 2.956 0 4.222-2.571 5.157-5.019 5.432.399.344.743 1.004.743 2.035 0 1.471-.014 2.654-.014 3.025 0 .289.206.632.756.522C19.851 20.979 23 16.854 23 12c0-6.077-4.922-11-11-11Z">
+            </path>
+        </svg>
+    </a>
+
     <div class="container">
         <h1>HBAR Exchange Rate Oracle Analysis - Interactive Chart</h1>
         <p>Compare Hedera Oracle Exchange Rate vs CMC prices with percentage differences.<br />Hedera updates prices
@@ -483,7 +522,47 @@
                                 }
                             },
                             title: { display: true, text: 'Date UTC' },
-                            ticks: { source: 'data', autoSkip: true, maxRotation: 45 },
+                            ticks: {
+                                source: 'data',
+                                autoSkip: true,
+                                maxRotation: 45,
+                                callback: function (value, index, ticks) {
+                                    const date = new Date(value);
+                                    const scale = this.chart.scales.x;
+                                    const range = scale.max - scale.min;
+
+                                    // Determine format based on time range
+                                    if (range <= 24 * 60 * 60 * 1000) { // Less than 1 day
+                                        return date.toLocaleString('en-US', {
+                                            hour: '2-digit',
+                                            minute: '2-digit',
+                                            hour12: false,
+                                            timeZone: 'UTC'
+                                        });
+                                    } else if (range <= 7 * 24 * 60 * 60 * 1000) { // Less than 1 week
+                                        return date.toLocaleString('en-US', {
+                                            month: 'short',
+                                            day: '2-digit',
+                                            hour: '2-digit',
+                                            minute: '2-digit',
+                                            hour12: false,
+                                            timeZone: 'UTC'
+                                        });
+                                    } else if (range <= 30 * 24 * 60 * 60 * 1000) { // Less than 1 month
+                                        return date.toLocaleDateString('en-US', {
+                                            month: 'short',
+                                            day: '2-digit',
+                                            timeZone: 'UTC'
+                                        });
+                                    } else {
+                                        return date.toLocaleDateString('en-US', {
+                                            year: 'numeric',
+                                            month: 'short',
+                                            timeZone: 'UTC'
+                                        });
+                                    }
+                                }
+                            },
                             grid: { offset: false },
                             offset: true
                         },
